handle the vertical sizing, scrolling, and overflow issues involving the expanded view mode

--- a/front/src/components/ExpandedViewMode/ExpandedViewMode.css
+++ b/front/src/components/ExpandedViewMode/ExpandedViewMode.css
@@ -30,8 +30,6 @@
 .expanded-view-wrapper {
   box-shadow: 0px 0px 10px #0000001f;
   width: 500px;
-  min-height: 500px;
-  max-height: calc(100vh - 70px);
   background: #ffffff;
   border-radius: 12px;
   display: flex;
@@ -77,11 +75,20 @@
   cursor: pointer;
 }
 
+/* expanded view date picker */
+
+.expanded-view-wrapper>.date_picker_wrapper {
+  transform: translate(-50%, -50%);
+  top: 50%;
+  left: 50%;
+}
+
 .expanded-view-main {
   display: flex;
   flex-direction: row;
-  height: 100%;
-  overflow-y: hidden;
+  flex: 1;
+  min-height: 100px;
+  max-height: calc(100vh - 200px);
 }
 
 .expanded-view-right-menu {
